# DevOps-Guardian

./: .gitignore  README.md  pyproject.toml  requirements.txt
devops-guardian/: cli.py  utils.py
devops_guardian/: cli.py
devops_guardian.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: tests_cli.py
